- Sell all items at once instead of just 8 at a time.
- skillsAddAuto was waiting a long time to add the next skill point.
- Auto-drop will look at full item name now.
- Shop auto open delay will now work correctly after reconnecting.
- Don't autoreply in town.
- The !include directive in a config file was causing everything above it to
  be clobbered.

New features:
- Don't use teleportAuto_minAggressives if the more specific
  teleportAuto_minAggressivesInLock is specified.
- Don't use teleportAuto_maxDmg if the more specific
  teleportAuto_maxDmgInLock is specified.
- New 'guild request <player>' command to request someone to join a guild.
- "Press ENTER to exit this program." prompt removed from Linux version.
- New 'guild leave' command (needs testing, but the server I play is down)
  added.
- Nearly complete oRO and pRO support. Thanks to jojobaoil and duckieeex!
- Display a warning if Kore is attempting to use a skill it doesn't have.
- Using the Teleport skill will now correctly make Kore teleport.
- Some statuses might be detected more accurately now.

New config options:
- showDomain (flag)
  If set to 1 will display domains along with messages.
- serverType (number)
  Defines what kind of server you're playing on.
  0 = normal server
  1 = oRO (Oceania)
  2 = pRO (Philippines)
- allowedMaps (list of maps)
  Exit or respawn of Kore is on a map other than the ones specified
  in (list of maps). This is useful on pRO where GMs warp you to
  secret rooms.
- allowedMaps_reaction (number)
  0 = respawn
  1 = exit

Credits:
- jsteng: VVVS weapon name bugfix, packet 01AB support.
- arachno: Language code bugfix, chat.txt map name bugfix.
- Duckieeex, Mananabas, gradeA: Help with pRO support.
- jojobaoil: Minor bug fixes.

==================
### 1.5.2 (beta)
==================

** INCOMPATIBLE CHANGES **:
- For users of teleportAuto_search, in order to have it work you must now:
  * Set teleportAuto_idle to 1